# agentgrid

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SPEC.md  package-lock.json  package.json  vercel.json
.github/workflows/: deploy.yml
app/: components.json  globals.css  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/agents/: AgentsContent.tsx  page.tsx
app/app/dashboard/: page.tsx
app/app/tasks/: page.tsx
app/app/tasks/[id]/: page.tsx
app/app/tasks/new/: page.tsx
app/components/: EscrowStatus.tsx  RegisterAgentModal.tsx  ReputationBadge.tsx  TaskCard.tsx  WalletProvider.tsx
app/hooks/: useAgent.ts  usePrograms.ts
app/idl/: agent_grid.json  reputation_chain.json  task_escrow.json
app/lib/: anchor.ts  hooks.ts  programs.ts  transactions.ts  types.ts
programs/agent-grid/: Cargo.toml  Xargo.toml  keypair.json
programs/agent-grid/src/: error.rs  lib.rs  state.rs
programs/agent-grid/src/instructions/: accept_bid.rs  approve_result.rs  create_task.rs  dispute.rs  mod.rs  post_bid.rs  resolve_dispute.rs  submit_result.rs
programs/reputation-chain/: Cargo.toml  keypair.json
programs/reputation-chain/src/: error.rs  lib.rs  state.rs
programs/reputation-chain/src/instructions/: get_score.rs  init_agent.rs  mod.rs  record_outcome.rs
programs/task-escrow/: Cargo.toml  keypair.json
programs/task-escrow/src/: error.rs  lib.rs  state.rs
programs/task-escrow/src/instructions/: init_escrow.rs  mod.rs  (+4 more)
scripts/: deploy.sh
tests/: agent-grid.ts
